--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<meta name="viewport" content="width=device-width, initial-scale=1"charset="UTF-8">
+<meta name="viewport"
+     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, 
+     user-scalable=0, charset="UTF-8" >
+
 <title>Jason McLean</title>
 
 <meta name="description" content="Artist Jason McLean's Website Homepage">
