--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@ body, html {
   </div>
   
   <div class="item3">
-  	<b>Current</b></br></br>
-	Paul Petro Contemporary Art</br>
-	Toronto, ON</br></br>
-	<u><a href="https://www.multiplesandsmallworks.com/search-results/q-jason%2520mclean/qc-products">Available Works</a></u></br>
+  	<b>April 15th Opening</b></br></br>
+	Gallery 23</br>
+	New York, NY</br></br>
+	<u><a href="https://gallery23ny.org/">NFT Group Show</a></u></br>
   </div>
   
   <div class="item4">
@@ -153,18 +153,18 @@ body, html {
 	<u><a href="https://www.gallerystratford.on.ca/">Exhibition with Ross Bell</a></u></br>
   </div>
 
-  <div class="item6">
+  <div class="item5">
   	<b>April 18 - 24 2021</b></br></br>
 	Up with Art Fundraiser Auction</br>
 	London, ON</br></br>
 	<u><a href="https://upwithart.ca/">Charity Auction</a></u></br>
   </div>
-  
-  <div class="item5">
-  	<b>2019 - 2029</b></br></br>
-	Glenhyrst Art Gallery of Brant</br>
-	Brantford, ON</br></br>
-	<u><a href="https://www.brantford.ca/en/things-to-do/brantfords-grand-exhibit.aspx#">Public Art</a></u></br>
+						      
+  <div class="item6">
+  	<b>Current</b></br></br>
+	Paul Petro Contemporary Art</br>
+	Toronto, ON</br></br>
+	<u><a href="https://www.multiplesandsmallworks.com/search-results/q-jason%2520mclean/qc-products">Available Works</a></u></br>
   </div>
 
 </div>
