--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ body, html {
 
 <div class="grid-container2">
   <div class="item1">
-  	<b>Feb 6th - Mar 21st</b></br></br>
+  	<b>Feb 6 - Mar 21, 2021</b></br></br>
 	Van Der Plas Gallery</br>
 	New York, NY</br></br>
 	<u><a href="http://vanderplasgallery.com/">Group Exhibition</a></u></br>
@@ -140,21 +140,21 @@ body, html {
   </div>
   
   <div class="item3">
-  	<b>April 15th Opening</b></br></br>
+  	<b>Opening April 15th, 2021</b></br></br>
 	Gallery 23</br>
 	New York, NY</br></br>
 	<u><a href="https://gallery23ny.org/">NFT Group Show</a></u></br>
   </div>
   
   <div class="item4">
-  	<b>Oct 8 - Dec 31 2021</b></br></br>
+  	<b>Oct 8 - Dec 31, 2021</b></br></br>
 	Gallery Stratford</br>
 	Stratford, ON</br></br>
 	<u><a href="https://www.gallerystratford.on.ca/">Exhibition with Ross Bell</a></u></br>
   </div>
 
   <div class="item5">
-  	<b>April 18 - 24 2021</b></br></br>
+  	<b>April 18 - 24, 2021</b></br></br>
 	Up with Art Fundraiser Auction</br>
 	London, ON</br></br>
 	<u><a href="https://upwithart.ca/">Charity Auction</a></u></br>
