--- a/index.html
+++ b/index.html
@@ -113,11 +113,12 @@ body, html {
 
 
 </br><br></br><br></br>
-
-<h1 style="font-size:2"><center>Recent Press</center></h1>
+<center>
+<h1 style="font-size:2">Recent Press</h1>
 	<h6><a href="https://lfpress.com/entertainment/local-arts/london-gallery-offers-glimpse-of-artist-jason-mcleans-personal-collection">McLean/Copeland Collection Show - The London Free Press</h6>
 	<h6><a href="https://www.cbc.ca/listen/live-radio/1-80-afternoon-drive/clip/15809297-artist-jason-mclean-returns-home-london-inspiring-work">CBC Afternoon Drive with Chris dela Torre Interview</h6>
 	<h6><a href="https://podcasts.apple.com/ca/podcast/jason-mclean/id1551013809?i=1000511495981">Art World with Noah Becker Interview</h6>
+</center>
 </br><br></br><br></br>
 
 
