--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@ h3 {
 </br></br>
 Jason Mclean
 </br></br>
-Brooklyn based Canadian artist, Jason McLean was born in London, ON in 1971. After attending H.B. Beal Secondary School, McLean graduated from the Emily Carr Institute of Art and Design, Vancouver in 1997. Since 1994, Jason McLean has exhibited worldwide, including shows at the Vancouver Art Gallery, Art Gallery of Alberta, MOCA Toronto, Fondazione Bevilacqua La Masa in Venice, Mother’s Tankstation in Dublin, Ireland, Loyal Gallery in Malmo, Sweden, Modern Art Museum in Henningsvær, Norway, Berry Campbell Gallery in New York, and Bravin Lee Programs in New York.
+Brooklyn based Canadian artist, Jason McLean was born in London, ON in 1971. After attending H.B. Beal Secondary School, McLean graduated from the Emily Carr Institute of Art and Design, Vancouver in 1997. Since 1994, Jason McLean has exhibited worldwide, including shows at the MOMA New York, Vancouver Art Gallery, Art Gallery of Alberta, MOCA Toronto, Fondazione Bevilacqua La Masa in Venice, Mother’s Tankstation in Dublin, Ireland, Loyal Gallery in Malmo, Sweden, Modern Art Museum in Henningsvær, Norway, Berry Campbell Gallery in New York, and Bravin Lee Programs in New York.
 </br></br>
 Jason McLean has work in major collections throughout North America including the Museum of Modern Art in New York, National Gallery of Canada, Vancouver Art Gallery, BMO Collection, TD Bank and the Royal Bank of Canada.
 </br></br>
