--- a/index.html
+++ b/index.html
@@ -131,24 +131,17 @@ body, html {
 
 <div class="grid-container2">
   <div class="item1">
-  	<b>Feb 6 - Mar 21, 2021</b></br></br>
+  	<b>August, 2021</b></br></br>
 	Van Der Plas Gallery</br>
 	New York, NY</br></br>
-	<u><a href="http://vanderplasgallery.com/">Group Exhibition</a></u></br>
+	<u><a href="http://vanderplasgallery.com/">Solo Show</a></u></br>
   </div>
 
   <div class="item2">
-  	<b>Feb 27 - Mar 27, 2021</b></br></br>
-	Michael Gibson Gallery</br>
-	London, ON</br></br>
-	<u><a href="https://www.gibsongallery.com/exhibitions/mclean-copeland-art-collection/">McLean/Copeland Collection Show</a></u></br>
-  </div>
-  
-  <div class="item3">
-  	<b>Opening April 15th, 2021</b></br></br>
-	Gallery 23</br>
-	New York, NY</br></br>
-	<u><a href="https://gallery23ny.org/">NFT Group Show</a></u></br>
+  	<b>Jun 26 - Sep 11, 2021</b></br></br>
+	Kamloops Art Gallery</br>
+	Kamloops, BC</br></br>
+	<u><a href="https://kag.bc.ca/">Postal Art Show</a></u></br>
   </div>
   
   <div class="item4">
@@ -158,12 +151,6 @@ body, html {
 	<u><a href="https://www.gallerystratford.on.ca/">Exhibition with Ross Bell</a></u></br>
   </div>
 
-  <div class="item5">
-  	<b>April 18 - 24, 2021</b></br></br>
-	Up with Art Fundraiser Auction</br>
-	London, ON</br></br>
-	<u><a href="https://upwithart.ca/">Charity Auction</a></u></br>
-  </div>
 						      
   <div class="item6">
   	<b>Current</b></br></br>
