--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ body, html {
   </div>
   
   <div class="item3">
-  	<b>Oct 8 - Dec 31, 2021</b></br></br>
+  	<b>Spring 2022</b></br></br>
 	Gallery Stratford</br>
 	Stratford, ON</br></br>
 	<u><a href="https://www.gallerystratford.on.ca/">Exhibition with Ross Bell</a></u></br>
