--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ body, html {
 
 <div class="grid-container2">
   <div class="item1">
-  	<b>August, 2021</b></br></br>
+  	<b>October 2021</b></br></br>
 	Van Der Plas Gallery</br>
 	New York, NY</br></br>
 	<u><a href="http://vanderplasgallery.com/">Solo Show</a></u></br>
