--- a/index.html
+++ b/index.html
@@ -158,6 +158,13 @@ body, html {
 	Toronto, ON</br></br>
 	<u><a href="https://www.multiplesandsmallworks.com/search-results/q-jason%2520mclean/qc-products">Available Works</a></u></br>
   </div>
+						      
+  <div class="item4">
+  	<b>October 2021</b></br></br>
+	Carbon Art and Design</br>
+	Picton, ON</br></br>
+	<u><a href="https://www.carbonartdesign.com/">Show with Tomas DelBalso</a></u></br>
+  </div>
 
 </div>
 
