--- a/index.html
+++ b/index.html
@@ -159,11 +159,18 @@ body, html {
 	<u><a href="https://www.multiplesandsmallworks.com/search-results/q-jason%2520mclean/qc-products">Available Works</a></u></br>
   </div>
 						      
-  <div class="item4">
+  <div class="item5">
   	<b>October 2021</b></br></br>
 	Carbon Art and Design</br>
 	Picton, ON</br></br>
 	<u><a href="https://www.carbonartdesign.com/">Show with Tomas DelBalso</a></u></br>
+  </div>
+	
+  <div class="item6">
+  	<b>October 2021</b></br></br>
+	Art With Heart</br>
+	Toronto, ON</br></br>
+	<u><a href="http://artwithheart.ca/">Charity Auction</a></u></br>
   </div>
 
 </div>
