--- a/index.html
+++ b/index.html
@@ -173,6 +173,13 @@ body, html {
 	<u><a href="http://artwithheart.ca/">Charity Auction</a></u></br>
   </div>
 
+  <div class="item7">
+  	<b>May 3 - Dec 31, 2021</b></br></br>
+	Museum London</br>
+	London, ON</br></br>
+	<u><a href="http://80ml.museumlondon.ca/exhibition/time-trigger/">Group Exhibition</a></u></br>
+  </div>
+
 </div>
 
 </body>
